force-app/main/default/objects/Flight__c/fields/A_C_Reg__c.field-meta.xml
<CustomField>
    <fullName>A_C_Reg__c</fullName>
    <label>A/C Reg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>