force-app/main/default/objects/Flight__c/fields/Accepted_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Passengers__c</fullName>
    <label>Accepted Passengers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>