force-app/main/default/objects/Flight__c/fields/Aircraft_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Configuration__c</fullName>
    <label>Aircraft Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>