force-app/main/default/objects/Flight__c/fields/Aircraft_Configuration_Economy_Class__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Configuration_Economy_Class__c</fullName>
    <description>Displays the maximum number of economy class available seats in the aircraft</description>
    <label>Aircraft Configuration Economy Class</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>