force-app/main/default/objects/Flight__c/fields/Aircraft_Configuration_First_Class__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Configuration_First_Class__c</fullName>
    <description>Displays the maximum number of first class available seats in the aircraft</description>
    <label>Aircraft Configuration First Class</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>