force-app/main/default/objects/Flight__c/fields/Aircraft_Configuration_Premium_Economy__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Configuration_Premium_Economy__c</fullName>
    <description>Displays the maximum number of premium economy class available seats in the aircraft</description>
    <label>Aircraft Configuration Premium Economy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>