force-app/main/default/objects/Flight__c/fields/Aircraft_Description__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Description__c</fullName>
    <formula>AircraftId__r.Aircraft_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A/C Model</label>
    <type>Text</type>
</CustomField>