force-app/main/default/objects/Flight__c/fields/AircraftId__c.field-meta.xml
<CustomField>
    <fullName>AircraftId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Registration</label>
    <referenceTo>Aircraft__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>