force-app/main/default/objects/Flight__c/fields/Airline_Code__c.field-meta.xml
<CustomField>
    <fullName>Airline_Code__c</fullName>
    <formula>IF(LEFT(Name, 2)=='TG', 'TG', '')</formula>
    <label>Airline Code</label>
    <type>Text</type>
</CustomField>