force-app/main/default/objects/Flight__c/fields/ARR_FLT_FROM_del__c.field-meta.xml
<CustomField>
    <fullName>ARR_FLT_FROM_del__c</fullName>
    <description>Displays the flight arriving with respect to the current user's station</description>
    <label>ARR FLT FROM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>