force-app/main/default/objects/Flight__c/fields/Arrival_Delay__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Delay__c</fullName>
    <label>Arrival Delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>