force-app/main/default/objects/Flight__c/fields/Arrival_Delay_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Delay_DateTime__c</fullName>
    <formula>DATETIMEVALUE( Arrival_Delay__c )</formula>
    <label>Arrival Delay DateTime</label>
    <type>DateTime</type>
</CustomField>