force-app/main/default/objects/Flight__c/fields/Arrival_STN_ICAO__c.field-meta.xml
<CustomField>
    <fullName>Arrival_STN_ICAO__c</fullName>
    <label>Arrival STN ICAO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>