force-app/main/default/objects/Flight__c/fields/Arrival_STN_Name__c.field-meta.xml
<CustomField>
    <fullName>Arrival_STN_Name__c</fullName>
    <label>Arrival STN Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>