force-app/main/default/objects/Flight__c/fields/Arrival_Time_UTC__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time_UTC__c</fullName>
    <formula>IF( NOT(ISNULL(ATA_UTC_DateTime__c)), ATA_UTC_DateTime__c, IF( NOT(ISNULL(ETA_UTC_DateTime__c)), ETA_UTC_DateTime__c, STA_UTC_DateTime__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival Time UTC</label>
    <type>DateTime</type>
</CustomField>