force-app/main/default/objects/Flight__c/fields/ATA__c.field-meta.xml
<CustomField>
    <fullName>ATA__c</fullName>
    <description>Use this Field ATA display on page layout</description>
    <formula>IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ATA_LT__c , 8), 5), ":", "."),1) = "0", MID
(
SUBSTITUTE(LEFT(RIGHT( ATA_LT__c , 8), 5), ":", "."), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ATA_LT__c , 8), 5), ":", ".")
)
), SUBSTITUTE(LEFT(RIGHT( ATA_LT__c , 8), 5), ":", "."))</formula>
    <label>ATA</label>
    <type>Text</type>
</CustomField>