force-app/main/default/objects/Flight__c/fields/ATA_LT__c.field-meta.xml
<CustomField>
    <fullName>ATA_LT__c</fullName>
    <label>ATA LT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>