force-app/main/default/objects/Flight__c/fields/ATA_LT_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ATA_LT_DateTime__c</fullName>
    <formula>DATETIMEVALUE( ATA_LT__c )</formula>
    <label>ATA LT DateTime</label>
    <type>DateTime</type>
</CustomField>