force-app/main/default/objects/Flight__c/fields/ATA_UTC__c.field-meta.xml
<CustomField>
    <fullName>ATA_UTC__c</fullName>
    <label>ATA UTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>