force-app/main/default/objects/Flight__c/fields/ATA_UTC_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ATA_UTC_DateTime__c</fullName>
    <formula>DATETIMEVALUE( ATA_UTC__c )</formula>
    <label>ATA UTC DateTime</label>
    <type>DateTime</type>
</CustomField>