force-app/main/default/objects/Flight__c/fields/ATD__c.field-meta.xml
<CustomField>
    <fullName>ATD__c</fullName>
    <description>Used for display</description>
    <formula>IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ATD_LT__c , 8), 5), ":", "."),1) = "0", MID
(
SUBSTITUTE(LEFT(RIGHT( ATD_LT__c , 8), 5), ":", "."), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ATD_LT__c , 8), 5), ":", ".")
)
), SUBSTITUTE(LEFT(RIGHT( ATD_LT__c , 8), 5), ":", "."))</formula>
    <label>ATD</label>
    <type>Text</type>
</CustomField>