force-app/main/default/objects/Flight__c/fields/ATD_LT__c.field-meta.xml
<CustomField>
    <fullName>ATD_LT__c</fullName>
    <label>ATD LT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>