force-app/main/default/objects/Flight__c/fields/ATD_LT_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ATD_LT_DateTime__c</fullName>
    <formula>DATETIMEVALUE( ATD_LT__c )</formula>
    <label>ATD LT DateTime</label>
    <type>DateTime</type>
</CustomField>