force-app/main/default/objects/Flight__c/fields/ATD_UTC__c.field-meta.xml
<CustomField>
    <fullName>ATD_UTC__c</fullName>
    <label>ATD UTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>