force-app/main/default/objects/Flight__c/fields/ATD_UTC_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ATD_UTC_DateTime__c</fullName>
    <formula>DATETIMEVALUE( ATD_UTC__c )</formula>
    <label>ATD UTC DateTime</label>
    <type>DateTime</type>
</CustomField>