force-app/main/default/objects/Flight__c/fields/Available_Seat__c.field-meta.xml
<CustomField>
    <fullName>Available_Seat__c</fullName>
    <formula>IF(CONTAINS(Aircraft_Configuration__c, 'F'), 'F' &amp;
 IF((Aircraft_Configuration_First_Class__c - Booking_Passenger_First_Class__c) &lt; 0, ('-' &amp;
     LPAD(
     TEXT((Aircraft_Configuration_First_Class__c - Booking_Passenger_First_Class__c) * (-1)),
 2, '0')),
     LPAD(
     TEXT(Aircraft_Configuration_First_Class__c - Booking_Passenger_First_Class__c),
 2, '0')
    )
 , '') &amp;
IF(CONTAINS(Aircraft_Configuration__c, 'C'), ' C' &amp;
 IF((Aircraft_Configuration_Business_Class__c - Booking_Passenger_Business_Class__c) &lt; 0, ('-' &amp;
     LPAD(
     TEXT((Aircraft_Configuration_Business_Class__c - Booking_Passenger_Business_Class__c) * (-1)),
 2, '0')),
     LPAD(
     TEXT(Aircraft_Configuration_Business_Class__c - Booking_Passenger_Business_Class__c),
 2, '0')
    )
 , '') &amp;
IF(CONTAINS(Aircraft_Configuration__c, 'U'), ' U' &amp;
 IF((Aircraft_Configuration_Premium_Economy__c - Booking_Passenger_Premium_Economy_Class__c) &lt; 0, ('-' &amp;
     LPAD(
     TEXT((Aircraft_Configuration_Premium_Economy__c - Booking_Passenger_Premium_Economy_Class__c) * (-1)),
 2, '0')),
     LPAD(
     TEXT(Aircraft_Configuration_Premium_Economy__c - Booking_Passenger_Premium_Economy_Class__c),
 2, '0')
    )
 , '') &amp;
IF(CONTAINS(Aircraft_Configuration__c, 'Y'), ' Y' &amp;
 IF((Aircraft_Configuration_Economy_Class__c - Booking_Passenger_Economy_Class__c) &lt; 0, ('-' &amp;
     LPAD(
     TEXT((Aircraft_Configuration_Economy_Class__c - Booking_Passenger_Economy_Class__c) * (-1)),
 3, '0')),
     LPAD(
     TEXT(Aircraft_Configuration_Economy_Class__c - Booking_Passenger_Economy_Class__c),
 3, '0')
    )
 , '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Seat</label>
    <type>Text</type>
</CustomField>