force-app/main/default/objects/Flight__c/fields/BAY__c.field-meta.xml
<CustomField>
    <fullName>BAY__c</fullName>
    <formula>BAY_ARR_DEP__c</formula>
    <label>BAY</label>
    <type>Text</type>
</CustomField>