force-app/main/default/objects/Flight__c/fields/BAY_ARR_DEP__c.field-meta.xml
<CustomField>
    <fullName>BAY_ARR_DEP__c</fullName>
    <label>BAY ARR/DEP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>