force-app/main/default/objects/Flight__c/fields/Belt__c.field-meta.xml
<CustomField>
    <fullName>Belt__c</fullName>
    <label>Belt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>