force-app/main/default/objects/Flight__c/fields/Block_Time__c.field-meta.xml
<CustomField>
    <fullName>Block_Time__c</fullName>
    <description>Displays actual flying time in units of minutes</description>
    <label>Block Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>