force-app/main/default/objects/Flight__c/fields/Block_Time_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Block_Time_DateTime__c</fullName>
    <formula>DATETIMEVALUE( Block_Time__c )</formula>
    <label>Block Time DateTime</label>
    <type>DateTime</type>
</CustomField>