force-app/main/default/objects/Flight__c/fields/Booking_Passenger_First_Class__c.field-meta.xml
<CustomField>
    <fullName>Booking_Passenger_First_Class__c</fullName>
    <description>Displays the number of first class available seats in the aircraft</description>
    <label>Booking Passenger First Class</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>