force-app/main/default/objects/Flight__c/fields/Booking_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Booking_Passengers__c</fullName>
    <description>Used for display</description>
    <label>Booking Passengers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>