force-app/main/default/objects/Flight__c/fields/Cabin_Version__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Version__c</fullName>
    <formula>AircraftId__r.Cabin_Ver__c</formula>
    <label>Cabin Version</label>
    <type>Text</type>
</CustomField>