force-app/main/default/objects/Flight__c/fields/Case_Amount__c.field-meta.xml
<CustomField>
    <fullName>Case_Amount__c</fullName>
    <label>Case Amount (Clarify)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>