force-app/main/default/objects/Flight__c/fields/Change_Flight_Date_LT__c.field-meta.xml
<CustomField>
    <fullName>Change_Flight_Date_LT__c</fullName>
    <description>Displays the changed flight date in local time</description>
    <label>Change Flight Date LT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>