force-app/main/default/objects/Flight__c/fields/Change_Flight_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Change_Flight_Date_UTC__c</fullName>
    <description>Displays the changed flight date in UTC time</description>
    <label>Change Flight Date UTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>