force-app/main/default/objects/Flight__c/fields/Change_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Change_Flight_Number__c</fullName>
    <description>Displays the changed flight number</description>
    <label>Change Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>