force-app/main/default/objects/Flight__c/fields/Codeshare__c.field-meta.xml
<CustomField>
    <fullName>Codeshare__c</fullName>
    <label>Codeshare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>