force-app/main/default/objects/Flight__c/fields/Delay_Mins__c.field-meta.xml
<CustomField>
    <fullName>Delay_Mins__c</fullName>
    <label>Delay Mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>