force-app/main/default/objects/Flight__c/fields/DEP_FLT_TO_del__c.field-meta.xml
<CustomField>
    <fullName>DEP_FLT_TO_del__c</fullName>
    <label>DEP FLT TO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>