force-app/main/default/objects/Flight__c/fields/Departed__c.field-meta.xml
<CustomField>
    <fullName>Departed__c</fullName>
    <description>STD_UTC_DateTime__c &lt; NOW()</description>
    <formula>Departure_Time_UTC__c  &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departed</label>
    <type>Checkbox</type>
</CustomField>