force-app/main/default/objects/Flight__c/fields/Departure_Delay_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Departure_Delay_DateTime__c</fullName>
    <formula>DATETIMEVALUE( Departure_Delay__c )</formula>
    <label>Departure Delay DateTime</label>
    <type>DateTime</type>
</CustomField>