force-app/main/default/objects/Flight__c/fields/Departure_STN__c.field-meta.xml
<CustomField>
    <fullName>Departure_STN__c</fullName>
    <description>Used for display</description>
    <label>Departure STN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>