force-app/main/default/objects/Flight__c/fields/Departure_STN_ICAO__c.field-meta.xml
<CustomField>
    <fullName>Departure_STN_ICAO__c</fullName>
    <label>Departure STN ICAO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>