force-app/main/default/objects/Flight__c/fields/Departure_STN_Name__c.field-meta.xml
<CustomField>
    <fullName>Departure_STN_Name__c</fullName>
    <label>Departure STN Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>