force-app/main/default/objects/Flight__c/fields/Departure_Time_UTC__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time_UTC__c</fullName>
    <formula>IF(NOT(ISNULL(ATD_UTC_DateTime__c)), ATD_UTC_DateTime__c, IF(NOT(ISNULL(ETD_UTC_DateTime__c)), ETD_UTC_DateTime__c, STD_UTC_DateTime__c) )</formula>
    <label>Departure Time UTC</label>
    <type>DateTime</type>
</CustomField>