force-app/main/default/objects/Flight__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <description>Displays the flight departing with respect to the current user's station</description>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>