force-app/main/default/objects/Flight__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <description>Estimated Time of Arrival</description>
    <formula>IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ETA_LT__c , 8), 5), ":", "."),1) = "0", MID
(
SUBSTITUTE(LEFT(RIGHT( ETA_LT__c , 8), 5), ":", "."), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ETA_LT__c , 8), 5), ":", ".")
)
), SUBSTITUTE(LEFT(RIGHT( ETA_LT__c , 8), 5), ":", "."))</formula>
    <label>ETA</label>
    <type>Text</type>
</CustomField>