force-app/main/default/objects/Flight__c/fields/ETA_LT__c.field-meta.xml
<CustomField>
    <fullName>ETA_LT__c</fullName>
    <label>ETA LT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>