force-app/main/default/objects/Flight__c/fields/ETA_LT_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ETA_LT_DateTime__c</fullName>
    <formula>DATETIMEVALUE( ETA_LT__c )</formula>
    <label>ETA LT DateTime</label>
    <type>DateTime</type>
</CustomField>