force-app/main/default/objects/Flight__c/fields/ETA_UTC__c.field-meta.xml
<CustomField>
    <fullName>ETA_UTC__c</fullName>
    <description>Estimated Time of Arrival</description>
    <label>ETA UTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>