force-app/main/default/objects/Flight__c/fields/ETA_UTC_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ETA_UTC_DateTime__c</fullName>
    <formula>DATETIMEVALUE( ETA_UTC__c )</formula>
    <label>ETA UTC DateTime</label>
    <type>DateTime</type>
</CustomField>