force-app/main/default/objects/Flight__c/fields/ETA_UTC_Display__c.field-meta.xml
<CustomField>
    <fullName>ETA_UTC_Display__c</fullName>
    <description>Estimated Time of Arrival (UTC)</description>
    <formula>LPAD(
IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ETA_UTC__c , 8), 5), ":", ":"),1) = "0", MID
(
SUBSTITUTE(LEFT(RIGHT( ETA_UTC__c , 8), 5), ":", ":"), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ETA_UTC__c , 8), 5), ":", ":")
)
), SUBSTITUTE(LEFT(RIGHT( ETA_UTC__c , 8), 5), ":", ":"))

, 5 , "0")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETA (UTC)</label>
    <type>Text</type>
</CustomField>