force-app/main/default/objects/Flight__c/fields/ETD__c.field-meta.xml
<CustomField>
    <fullName>ETD__c</fullName>
    <description>Estimated Time of Departure</description>
    <formula>IF(LEFT(SUBSTITUTE(LEFT(RIGHT( ETD_LT__c , 8), 5), ":", "."),1) = "0", MID
(
SUBSTITUTE(LEFT(RIGHT( ETD_LT__c , 8), 5), ":", "."), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( ETD_LT__c , 8), 5), ":", ".")
)
), SUBSTITUTE(LEFT(RIGHT( ETD_LT__c , 8), 5), ":", "."))</formula>
    <label>ETD</label>
    <type>Text</type>
</CustomField>