force-app/main/default/objects/Flight__c/fields/ETD_ETA__c.field-meta.xml
<CustomField>
    <fullName>ETD_ETA__c</fullName>
    <formula>ETD__c &amp; " / " &amp; ETA__c</formula>
    <label>ETD / ETA</label>
    <type>Text</type>
</CustomField>