force-app/main/default/objects/Flight__c/fields/ETD_LT__c.field-meta.xml
<CustomField>
    <fullName>ETD_LT__c</fullName>
    <label>ETD LT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>