force-app/main/default/objects/Flight__c/fields/ETD_LT_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ETD_LT_DateTime__c</fullName>
    <formula>DATETIMEVALUE( ETD_LT__c )</formula>
    <label>ETD LT DateTime</label>
    <type>DateTime</type>
</CustomField>