force-app/main/default/objects/Flight__c/fields/ETD_UTC__c.field-meta.xml
<CustomField>
    <fullName>ETD_UTC__c</fullName>
    <label>ETD UTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>