force-app/main/default/objects/Flight__c/fields/ETD_UTC_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ETD_UTC_DateTime__c</fullName>
    <formula>DATETIMEVALUE( ETD_UTC__c )</formula>
    <label>ETD UTC DateTime</label>
    <type>DateTime</type>
</CustomField>