force-app/main/default/objects/Flight__c/fields/First_Leg__c.field-meta.xml
<CustomField>
    <fullName>First_Leg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Leg</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>