force-app/main/default/objects/Flight__c/fields/Flight_Area__c.field-meta.xml
<CustomField>
    <fullName>Flight_Area__c</fullName>
    <label>Flight Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>