force-app/main/default/objects/Flight__c/fields/Flight_Cancel_Flag__c.field-meta.xml
<CustomField>
    <fullName>Flight_Cancel_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays whether flight is cancelled</description>
    <label>Flight Cancel Flag</label>
    <type>Checkbox</type>
</CustomField>