force-app/main/default/objects/Flight__c/fields/Flight_Change_Flag__c.field-meta.xml
<CustomField>
    <fullName>Flight_Change_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays whether flight is changed</description>
    <label>Flight Change Flag</label>
    <type>Checkbox</type>
</CustomField>