force-app/main/default/objects/Flight__c/fields/Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date__c</fullName>
    <description>Used for input when creating new Flights</description>
    <label>Flight Date</label>
    <type>Date</type>
</CustomField>