force-app/main/default/objects/Flight__c/fields/Flight_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_F__c</fullName>
    <formula>IF( Flight_Date_LT__c = "", "", 
RIGHT( Flight_Date_LT__c , 2) + "/" + MID( Flight_Date_LT__c , 6, 2) + "/" + LEFT( Flight_Date_LT__c , 4) 
)</formula>
    <label>Flight Date</label>
    <type>Text</type>
</CustomField>