force-app/main/default/objects/Flight__c/fields/Flight_Date_LT__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_LT__c</fullName>
    <description>Used for display</description>
    <label>Flight Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>