force-app/main/default/objects/Flight__c/fields/Flight_Date_LT_F__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_LT_F__c</fullName>
    <formula>DATEVALUE( Flight_Date_LT__c )</formula>
    <label>Flight Date LT</label>
    <type>Date</type>
</CustomField>