force-app/main/default/objects/Flight__c/fields/Flight_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_UTC__c</fullName>
    <description>Should save the data like :16OCT16 instead of 2016-10-16, Trigger do convert 10OCT16 to 2016-10-16 automatically.</description>
    <label>Flight Date UTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>