force-app/main/default/objects/Flight__c/fields/Flight_Date_UTC_F__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_UTC_F__c</fullName>
    <formula>DATEVALUE( Flight_Date_UTC__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Date UTC</label>
    <type>Date</type>
</CustomField>