force-app/main/default/objects/Flight__c/fields/Flight_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Flight_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Flight External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>