force-app/main/default/objects/Flight__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <description>Data format :TG999</description>
    <label>Flight Numbers</label>
    <length>10</length>
    <type>Text</type>
</CustomField>