force-app/main/default/objects/Flight__c/fields/Flight_Region__c.field-meta.xml
<CustomField>
    <fullName>Flight_Region__c</fullName>
    <label>Flight Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>