force-app/main/default/objects/Flight__c/fields/Flight_Remark__c.field-meta.xml
<CustomField>
    <fullName>Flight_Remark__c</fullName>
    <description>Displays the extra information on the flight</description>
    <label>Flight Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>