force-app/main/default/objects/Flight__c/fields/Flying_Elapsed_Time_HH_MM__c.field-meta.xml
<CustomField>
    <fullName>Flying_Elapsed_Time_HH_MM__c</fullName>
    <description>Displays the flying time in a HH:MM format</description>
    <formula>LEFT( Flying_Time_Elapsed_Time__c , 2)  &amp; ":" &amp; RIGHT ( Flying_Time_Elapsed_Time__c , 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flying Elapsed Time (HH:MM)</label>
    <type>Text</type>
</CustomField>