force-app/main/default/objects/Flight__c/fields/Flying_Time_Elapsed_Time__c.field-meta.xml
<CustomField>
    <fullName>Flying_Time_Elapsed_Time__c</fullName>
    <description>Displays the flying time in an hour format</description>
    <inlineHelpText>HH:MM</inlineHelpText>
    <label>Flying Time (Elapsed Time)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>