force-app/main/default/objects/Flight__c/fields/IS_CFMS__c.field-meta.xml
<CustomField>
    <fullName>IS_CFMS__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Displays whether the flight is a flight created by CFMS</description>
    <label>IS CFMS</label>
    <type>Checkbox</type>
</CustomField>