force-app/main/default/objects/Flight__c/fields/Is_Matching_User_Preference__c.field-meta.xml
<CustomField>
    <fullName>Is_Matching_User_Preference__c</fullName>
    <formula>IF(
(CONTAINS($User.Station__c, Departure_STN__c) || CONTAINS($User.Station__c, Arrival_STN__c)) &amp;&amp;
(CONTAINS($User.A_C_REG__c, AircraftId__r.Name)) ||
(CONTAINS($User.A_C_Type__c, AircraftId__r.Aircraft_Type__c)
 ) , 
TRUE, 
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Matching User Preference</label>
    <type>Checkbox</type>
</CustomField>