force-app/main/default/objects/Flight__c/fields/Is_Port_Equals_to_Bay__c.field-meta.xml
<CustomField>
    <fullName>Is_Port_Equals_to_Bay__c</fullName>
    <formula>IF( Departure_STN__c = $User.Port__c || Arrival_STN__c = $User.Port__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Port Equals to Bay</label>
    <type>Checkbox</type>
</CustomField>