force-app/main/default/objects/Flight__c/fields/Landed__c.field-meta.xml
<CustomField>
    <fullName>Landed__c</fullName>
    <formula>Arrival_Time_UTC__c &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landed</label>
    <type>Checkbox</type>
</CustomField>