force-app/main/default/objects/Flight__c/fields/Last_Sync_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Job_Name__c</fullName>
    <label>Last Sync Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>