force-app/main/default/objects/Flight__c/fields/Leg_Number__c.field-meta.xml
<CustomField>
    <fullName>Leg_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used for display</description>
    <label>Leg Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>