force-app/main/default/objects/Flight__c/fields/Maintenace_Case_Report__c.field-meta.xml
<CustomField>
    <fullName>Maintenace_Case_Report__c</fullName>
    <formula>HYPERLINK(
Report__c ,
'View',
"_parent"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenace Case Report</label>
    <type>Text</type>
</CustomField>