force-app/main/default/objects/Flight__c/fields/Manual_Run__c.field-meta.xml
<CustomField>
    <fullName>Manual_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Run</label>
    <type>Checkbox</type>
</CustomField>