force-app/main/default/objects/Flight__c/fields/My_Station_F__c.field-meta.xml
<CustomField>
    <fullName>My_Station_F__c</fullName>
    <formula>IF( Departure_STN__c =  $User.Station__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Station</label>
    <type>Checkbox</type>
</CustomField>