force-app/main/default/objects/Flight__c/fields/Next_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Next_Flight_Number__c</fullName>
    <label>Next Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>