force-app/main/default/objects/Flight__c/fields/Next_Flight_STD_UTC__c.field-meta.xml
<CustomField>
    <fullName>Next_Flight_STD_UTC__c</fullName>
    <label>Next Flight STD UTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>