force-app/main/default/objects/Flight__c/fields/Next_Flight_STD_UTC_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Next_Flight_STD_UTC_DateTime__c</fullName>
    <formula>DATETIMEVALUE( Next_Flight_STD_UTC__c )</formula>
    <label>Next Flight STD UTC DateTime</label>
    <type>DateTime</type>
</CustomField>